update BookInfoRetriever; update term.